--- a/forget-your-password.html
+++ b/forget-your-password.html
@@ -16,30 +16,32 @@
     <!-- password recovery section start -->
     <div class="password_recovery">
         <div class="container-fluid">
-            <div class="row">
-                <div class="col-lg-6 col-md-12 col-sm-12 col-12 banner">
-                    <div class="password_inner">
-                        <div class="logo"><img src="img/logo.png" alt="logo"></div>
-                        <div class="middle">
-                            <h1>Trouble logging in?</h1>
-                            <p>No worries! Enter your email address to reset your password and regain access to your
-                                HealthLearn account.</p>
+            <div class="password-recovery-inner">
+                <div class="row">
+                    <div class="col-lg-6 col-md-12 col-sm-12 col-12 banner">
+                        <div class="password_inner">
+                            <div class="logo"><img src="img/logo.png" alt="logo"></div>
+                            <div class="middle">
+                                <h1>Trouble logging in?</h1>
+                                <p>No worries! Enter your email address to reset your password and regain access to your
+                                    HealthLearn account.</p>
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="col-lg-6 col-md-12 col-sm-12 col-12 banner">
-                    <div class="password_inner1">
-                        <div class="form_inner">
-                            <h3>Password Recovery</h3>
-                            <div class="form-group">
-                                <label for="exampleInputEmail1" class="form-label">email</label>
-                                <input type="email" class="form-control" id="exampleInputEmail1"
-                                    aria-describedby="emailHelp" placeholder="Write Your E-Mail Here...">
-                                <div id="emailHelp" class="form-text">Enter your E-Mail and you will get the
-                                    instructions how to recover your password.</div>
-
+                    <div class="col-lg-6 col-md-12 col-sm-12 col-12 banner">
+                        <div class="password_inner1">
+                            <div class="form_inner">
+                                <h3>Password Recovery</h3>
+                                <div class="form-group">
+                                    <label for="exampleInputEmail1" class="form-label">email</label>
+                                    <input type="email" class="form-control" id="exampleInputEmail1"
+                                        aria-describedby="emailHelp" placeholder="Write Your E-Mail Here...">
+                                    <div id="emailHelp" class="form-text">Enter your E-Mail and you will get the
+                                        instructions how to recover your password.</div>
+    
+                                </div>
+                                <button type="submit" class="btn mt-5">Send An E-Mail</button>
                             </div>
-                            <button type="submit" class="btn mt-5">Send An E-Mail</button>
                         </div>
                     </div>
                 </div>
