--- a/forget-your-password.html
+++ b/forget-your-password.html
@@ -33,9 +33,9 @@
                             <div class="form_inner">
                                 <h3>Password Recovery</h3>
                                 <div class="form-group">
-                                    <label for="exampleInputEmail1" class="form-label">email</label>
+                                    <label for="exampleInputEmail1" class="form-label">E-Mail</label>
                                     <input type="email" class="form-control" id="exampleInputEmail1"
-                                        aria-describedby="emailHelp" placeholder="Write Your E-Mail Here...">
+                                        aria-describedby="emailHelp"  placeholder="Write Your E-Mail Here...">
                                     <div id="emailHelp" class="form-text">Enter your E-Mail and you will get the
                                         instructions how to recover your password.</div>
     
