--- a/sign-up.html
+++ b/sign-up.html
@@ -16,52 +16,55 @@
     <!-- password recovery section start -->
     <div class="password_recovery">
         <div class="container-fluid">
-            <div class="row">
-                <div class="col-lg-6 col-md-12 col-sm-12 col-12 banner">
-                    <div class="password_inner">
-                        <div class="logo"><img src="img/logo.png" alt="logo"></div>
-                        <div class="middle">
-                            <h1>Join Us!</h1>
-                            <p>Create an account to unlock access to healthcare quizzes and educational content tailored
-                                to your needs.</p>
+            <div class="password-recovery-inner">
+                <div class="row">
+                    <div class="col-lg-6 col-md-12 col-sm-12 col-12 banner">
+                        <div class="password_inner">
+                            <div class="logo"><img src="img/logo.png" alt="logo"></div>
+                            <div class="middle">
+                                <h1>Join Us!</h1>
+                                <p>Create an account to unlock access to healthcare quizzes and educational content
+                                    tailored
+                                    to your needs.</p>
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="col-lg-6 col-md-12 col-sm-12 col-12 banner">
-                    <div class="password_inner1">
-                        <div class="form_inner">
-                            <h3>Sign Up</h3>
-                            <div class="form-group mb-4">
-                                <label for="exampleInputname" class="form-label">Name</label>
-                                <input type="text" class="form-control" id="exampleInputname" placeholder="Write Your Name Here...">
+                    <div class="col-lg-6 col-md-12 col-sm-12 col-12 banner">
+                        <div class="password_inner1">
+                            <div class="form_inner">
+                                <h3>Sign Up</h3>
+                                <div class="form-group mb-4">
+                                    <label for="exampleInputname" class="form-label">Name</label>
+                                    <input type="text" class="form-control" id="exampleInputname"
+                                        placeholder="Write Your Name Here...">
+                                </div>
+                                <div class="form-group mb-4">
+                                    <label for="exampleInputEmail1" class="form-label">email</label>
+                                    <input type="email" class="form-control" id="exampleInputEmail1"
+                                        aria-describedby="emailHelp" placeholder="Write Your E-Mail Here...">
+                                </div>
+                                <div class="form-group mb-4">
+                                    <label for="exampleInputPassword1" class="form-label">Password</label>
+                                    <input type="password" class="form-control" id="exampleInputPassword1"
+                                        placeholder="Write Your Password Here...">
+                                </div>
+                                <div class="form-group  mb-4">
+                                    <label for="exampleInputStatus" class="form-label">Current Status</label>
+                                    <input type="Status" class="form-control" id="exampleInputStatus" placeholder="">
+                                </div>
+                                <div class="form-group  mb-4">
+                                    <label for="exampleInputcity" class="form-label">Location</label>
+                                    <input type="city" class="form-control" id="exampleInputcity"
+                                        placeholder="City, Country">
+                                </div>
+                                <div class="form-group  mb-4">
+                                    <label for="exampleInputage" class="form-label">Age Group</label>
+                                    <input type="age" class="form-control" id="exampleInputage" placeholder="">
+                                </div>
+                                <button type="submit" class="btn">Next</button>
+                                <div id="login" class="form-check-text">Already have an account ?<span><a href="s"> Sign
+                                            In.</a></span></div>
                             </div>
-                            <div class="form-group mb-4">
-                                <label for="exampleInputEmail1" class="form-label">email</label>
-                                <input type="email" class="form-control" id="exampleInputEmail1"
-                                    aria-describedby="emailHelp" placeholder="Write Your E-Mail Here...">
-                            </div>
-                            <div class="form-group mb-4">
-                                <label for="exampleInputPassword1" class="form-label">Password</label>
-                                <input type="password" class="form-control" id="exampleInputPassword1"
-                                    placeholder="Write Your Password Here...">
-                            </div>
-                            <div class="form-group  mb-4">
-                                <label for="exampleInputStatus" class="form-label">Current Status</label>
-                                <input type="Status" class="form-control" id="exampleInputStatus"
-                                    placeholder="">
-                            </div>
-                            <div class="form-group  mb-4">
-                                <label for="exampleInputcity" class="form-label">Location</label>
-                                <input type="city" class="form-control" id="exampleInputcity"
-                                    placeholder="City, Country">
-                            </div>
-                            <div class="form-group  mb-4">
-                                <label for="exampleInputage" class="form-label">Age Group</label>
-                                <input type="age" class="form-control" id="exampleInputage"
-                                    placeholder="">
-                            </div>
-                            <button type="submit" class="btn">Next</button>
-                            <div id="login" class="form-check-text">Already have an account ?<span><a href="#"> Sign In.</a></span></div>
                         </div>
                     </div>
                 </div>
