--- a/index.html
+++ b/index.html
@@ -23,6 +23,72 @@
                         <img src="img/logo.png" alt="">
                     </a>
                 </div>
+                <div class="navigation">
+                    <nav class="navbar">
+                        <ul class="">
+                            <li>
+                                <a href="">
+                                    <img src="img/iconamoon_home-fill.png" alt=""> Home
+                                </a>
+                            </li>
+                            <li>
+                                <a href="">
+                                    <img src="img/iconamoon_home-fill.png" alt=""> Questions
+                                </a>
+                            </li>
+                            <li>
+                                <a href="">
+                                    <img src="img/iconamoon_home-fill.png" alt=""> Videos
+                                </a>
+                            </li>
+                            <li>
+                                <a href="">
+                                    <img src="img/iconamoon_home-fill.png" alt=""> Flashcards
+                                </a>
+                            </li>
+                            <li>
+                                <a href="">
+                                    <img src="img/iconamoon_home-fill.png" alt=""> Study Schedule
+                                </a>
+                            </li>
+                            <li>
+                                <a href="">
+                                    <img src="img/iconamoon_home-fill.png" alt=""> AI Tutor
+                                </a>
+                            </li>
+                            <li>
+                                <a href="">
+                                    <img src="img/iconamoon_home-fill.png" alt=""> Personal Tutoring
+                                </a>
+                            </li>
+                            <li>
+                                <a href="">
+                                    <img src="img/iconamoon_home-fill.png" alt=""> Anatomy Atlas
+                                </a>
+                            </li>
+                            <li>
+                                <a href="">
+                                    <img src="img/iconamoon_home-fill.png" alt=""> Learning Modules
+                                </a>
+                            </li>
+                            <li>
+                                <a href="">
+                                    <img src="img/iconamoon_home-fill.png" alt=""> Blog
+                                </a>
+                            </li>
+                            <li>
+                                <a href="">
+                                    <img src="img/iconamoon_home-fill.png" alt=""> Knowledge Library
+                                </a>
+                            </li>
+                            <li>
+                                <a href="">
+                                    <img src="img/iconamoon_home-fill.png" alt=""> Analytics
+                                </a>
+                            </li>
+                        </ul>
+                    </nav>
+                </div>
             </header>
         </div>
 
