--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
                     </a>
                 </div>
                 <div class="navigation">
-                    <nav class="navbar">
-                        <ul class="">
+                    <nav class="side-menu">
+                        <ul>
                             <li>
                                 <a href="">
                                     <img src="img/iconamoon_home-fill.png" alt=""> Home
