--- a/index.html
+++ b/index.html
@@ -33,47 +33,47 @@
                             </li>
                             <li>
                                 <a href="">
-                                    <img src="img/iconamoon_home-fill.png" alt=""> Questions
+                                    <img src="img/questions.png" alt=""> Questions
                                 </a>
                             </li>
                             <li>
                                 <a href="">
-                                    <img src="img/iconamoon_home-fill.png" alt=""> Videos
+                                    <img src="img/fluent_video-28-filled.png" alt=""> Videos
                                 </a>
                             </li>
                             <li>
                                 <a href="">
-                                    <img src="img/iconamoon_home-fill.png" alt=""> Flashcards
+                                    <img src="img/Flashcards.png" alt=""> Flashcards
                                 </a>
                             </li>
                             <li>
                                 <a href="">
-                                    <img src="img/iconamoon_home-fill.png" alt=""> Study Schedule
+                                    <img src="img/ant-design_schedule-filled.png" alt=""> Study Schedule
                                 </a>
                             </li>
                             <li>
                                 <a href="">
-                                    <img src="img/iconamoon_home-fill.png" alt=""> AI Tutor
+                                    <img src="img/eos-icons_ai.png" alt=""> AI Tutor
                                 </a>
                             </li>
                             <li>
                                 <a href="">
-                                    <img src="img/iconamoon_home-fill.png" alt=""> Personal Tutoring
+                                    <img src="img/ic_baseline-account-box.png" alt=""> Personal Tutoring
                                 </a>
                             </li>
                             <li>
                                 <a href="">
-                                    <img src="img/iconamoon_home-fill.png" alt=""> Anatomy Atlas
+                                    <img src="img/game-icons_anatomy.png" alt=""> Anatomy Atlas
                                 </a>
                             </li>
                             <li>
                                 <a href="">
-                                    <img src="img/iconamoon_home-fill.png" alt=""> Learning Modules
+                                    <img src="img/iconoir_learning.png" alt=""> Learning Modules
                                 </a>
                             </li>
                             <li>
                                 <a href="">
-                                    <img src="img/iconamoon_home-fill.png" alt=""> Blog
+                                    <img src="img/Blog.png" alt=""> Blog
                                 </a>
                             </li>
                             <li>
